; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi_sh_sci.c_getmiso.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi_sh_sci.c_getmiso.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }
%struct.sh_sci_spi = type { i32 }

@PIN_RXD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_device*)* @getmiso to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getmiso(%struct.spi_device* %0) #0 {
  %2 = alloca %struct.spi_device*, align 8
  %3 = alloca %struct.sh_sci_spi*, align 8
  store %struct.spi_device* %0, %struct.spi_device** %2, align 8
  %4 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %5 = getelementptr inbounds %struct.spi_device, %struct.spi_device* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.sh_sci_spi* @spi_master_get_devdata(i32 %6)
  store %struct.sh_sci_spi* %7, %struct.sh_sci_spi** %3, align 8
  %8 = load %struct.sh_sci_spi*, %struct.sh_sci_spi** %3, align 8
  %9 = call i32 @SCSPTR(%struct.sh_sci_spi* %8)
  %10 = call i32 @ioread8(i32 %9)
  %11 = load i32, i32* @PIN_RXD, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 1, i32 0
  ret i32 %15
}

declare dso_local %struct.sh_sci_spi* @spi_master_get_devdata(i32) #1

declare dso_local i32 @ioread8(i32) #1

declare dso_local i32 @SCSPTR(%struct.sh_sci_spi*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
